--- a/javascriptObject.htm
+++ b/javascriptObject.htm
@@ -8,11 +8,11 @@
 
 <script>
 var vehicle = new Object();
-  make:"Honda"
-  model:"Accord"
-  year:2007
-  color:"Red"
-  engine:"V8";
+  vehicle.make = "Honda"
+  vehicle.model = "Accord"
+  vehicle.year = 2007
+  vehicle.color = "Red"
+  vehicle.engine = "V8";
 
 document.getElementById("demo").innerHTML =
 "Manufacturer: " + vehicle.make + "<br>Model: " + vehicle.model + "<br>Year: " + vehicle.year + "<br>Engine: " + vehicle.engine + "<br>Color: " + vehicle.color;
